fix: correct name in translations

--- a/templates/config-mst-24.json
+++ b/templates/config-mst-24.json
@@ -292,7 +292,7 @@
         "c_r_acceleration": "Const Rot Acceleration",
         "c_r_deceleration": "Const Rot Deceleration",
         "c_r_speed": "Const Rot Speed",
-        "c_r_emergency_deceleration": "Const Rot Emerg Deceleration",
+        "c_r_emerg_deceleration": "Const Rot Emerg Deceleration",
         "mA": "мА",
         "no": "No",
         "yes": "Yes",
@@ -343,7 +343,7 @@
         "c_r_acceleration": "Ускорение постоянного вращения",
         "c_r_deceleration": "Замедление постоянного вращения",
         "c_r_speed": "Скорость постоянного вращения",
-        "c_r_emergency_deceleration": "Замедление экстренного останова",
+        "c_r_emerg_deceleration": "Замедление экстренного останова",
         "mA": "мА",
         "No": "Нет",
         "Yes": "Да",
