--- a/templates/config-mst-24.json
+++ b/templates/config-mst-24.json
@@ -259,7 +259,7 @@
         "reg_type": "holding",
         "address": 93,
         "format": "u16",
-        "group": "general",
+        "group": "hw_info",
         "enabled": false,
         "readonly": true
       }
@@ -289,11 +289,7 @@
         "c_r_deceleration": "Const Rot Deceleration",
         "c_r_speed": "Const Rot Speed",
         "c_r_emerg_deceleration": "Const Rot Emerg Deceleration",
-        "mA": "мА",
-        "no": "No",
-        "yes": "Yes",
-        "start": "Start",
-        "stop": "Stop"
+        "model": "Model"
       },
       "ru": {
         "mst24_title": "Драйвер шагового двигателя ОВЕН (Meyertec) MST-24/Rtelligent NT60",
@@ -313,7 +309,7 @@
         "motor_type": "Тип мотора",
         "2-Phase": "Двухфазный",
         "3-Phase": "Трёхфазный",
-        "current_limit": "Ограничение тока двигателя, мА",
+        "current_limit": "Ограничение тока двигателя (мА)",
         "errors": "Ошибки",
         "status": "Состояние",
         "voltage": "Напряжение питания",
@@ -339,11 +335,7 @@
         "c_r_deceleration": "Замедление постоянного вращения",
         "c_r_speed": "Скорость постоянного вращения",
         "c_r_emerg_deceleration": "Замедление экстренного останова",
-        "mA": "мА",
-        "No": "Нет",
-        "Yes": "Да",
-        "Start": "Старт",
-        "Stop": "Стоп"
+        "model": "Модель"
       }
     }
   }
