--- a/templates/config-map6s-fw2.json
+++ b/templates/config-map6s-fw2.json
@@ -1033,6 +1033,17 @@
                 "group": "hw_info"
             },
             {
+                "name": "HW Batch Number",
+                "reg_type": "input",
+                "address": 304,
+                "type": "text",
+                "format": "string",
+                "string_data_size": 16,
+                "fw": "2.12.0",
+                "enabled": false,
+                "group": "hw_info"
+            },
+            {
                 "name": "FW Version",
                 "reg_type": "input",
                 "address": 250,
@@ -1097,6 +1108,7 @@
                 "Channel 6": "Канал 6",
                 "General": "Общее",
                 "HW Info": "Данные модуля",
+                "HW Batch Number": "Номер партии",
                 "Turns 1": "Коэффициент трансформации 1",
                 "Phi 1": "Фазовая задержка 1",
                 "Current Transformer Reverse 1": "Инвертировать токовый трансформатор 1",
