--- a/templates/config-wb-ms_v2.json
+++ b/templates/config-wb-ms_v2.json
@@ -218,6 +218,17 @@
                 "group": "hw_info"
             },
             {
+                "name": "HW Batch Number",
+                "type": "text",
+                "reg_type": "input",
+                "address": 304,
+                "format": "string",
+                "string_data_size": 16,
+                "fw": "4.35.0",
+                "enabled": false,
+                "group": "hw_info"
+            },
+            {
                 "name": "FW Version",
                 "reg_type": "input",
                 "address": 250,
@@ -472,6 +483,7 @@
                 "Air Quality Index": "Индекс качества воздуха (AQI)",
                 "VOC Baseline": "Смещение уровня VOC",
                 "Serial": "Серийный номер",
+                "HW Batch Number": "Номер партии",
                 "FW Version": "Версия прошивки",
                 "Input Voltage": "Напряжение питания",
                 "Uptime": "Время работы с момента включения (с)",
